--- a/index.html
+++ b/index.html
@@ -12,45 +12,48 @@
         window.addEventListener('load', function() {
           baguetteBox.run('.gallery');
         });
-        </script>
+    </script>
+    <script src="js/mySearchFunction.js"></script>
 </head>
 <body>
-    <div>search bar</div>
+    <div class="searchbar">
+        <input type="search" name="search" id="search" placeholder="Search" onkeyup="searchFor()">
+    </div>
     <div class="gallery">
-        <a href="photos/01.jpg" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields.">
-            <img src="photos/thumbnails/01.jpg" alt="H">
+        <a href="photos/01.jpg" data-caption="I love hay bales. Took this snap on a drive through the countryside past some straw fields." title="Hay Bales">
+            <img src="photos/thumbnails/01.jpg" alt="">
         </a>
-        <a href="photos/02.jpg" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here.">
+        <a href="photos/02.jpg" data-caption="The lake was so calm today. We had a great view of the snow on the mountains from here." title="Lake">
             <img src="photos/thumbnails/02.jpg" alt="">
         </a>
-        <a href="photos/03.jpg" data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below.">
+        <a href="photos/03.jpg" data-caption="I hiked to the top of the mountain and got this picture of the canyon and trees below." title="Canyon">
             <img src="photos/thumbnails/03.jpg" alt="">
         </a>
-        <a href="photos/04.jpg" data-caption="It was amazing to see an iceberg up close, it was so cold but didn't snow today.">
+        <a href="photos/04.jpg" data-caption="It was amazing to see an iceberg up close, it was so cold but didn't snow today." title="Iceberg">
             <img src="photos/thumbnails/04.jpg" alt="">
         </a>
-        <a href="photos/05.jpg" data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons.">
+        <a href="photos/05.jpg" data-caption="The red cliffs were beautiful. It was really hot in the desert but we did a lot of walking through the canyons." title="Desert">
             <img src="photos/thumbnails/05.jpg" alt="">
         </a>
-        <a href="photos/06.jpg" data-caption="Fall is coming, I love when the leaves on the trees start to change color.">
+        <a href="photos/06.jpg" data-caption="Fall is coming, I love when the leaves on the trees start to change color." title="Fall">
             <img src="photos/thumbnails/06.jpg" alt="">
         </a>
-        <a href="photos/07.jpg" data-caption="I drove past this plantation yesterday, everything is so green!">
+        <a href="photos/07.jpg" data-caption="I drove past this plantation yesterday, everything is so green!" title="Plantation">
             <img src="photos/thumbnails/07.jpg" alt="">
         </a>
-        <a href="photos/08.jpg" data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!">
+        <a href="photos/08.jpg" data-caption="My summer vacation to the Oregon Coast. I love the sandy dunes!" title="Dunes">
             <img src="photos/thumbnails/08.jpg" alt="">
         </a>
-        <a href="photos/09.jpg" data-caption="We enjoyed a quiet stroll down this countryside lane.">
+        <a href="photos/09.jpg" data-caption="We enjoyed a quiet stroll down this countryside lane." title="Countryside Lane" >
             <img src="photos/thumbnails/09.jpg" alt="">
         </a>
-        <a href="photos/10.jpg" data-caption="Sunset at the coast! The sky turned a lovely shade of orange.">
+        <a href="photos/10.jpg" data-caption="Sunset at the coast! The sky turned a lovely shade of orange." title="Sunset">
             <img src="photos/thumbnails/10.jpg" alt="">
         </a>
-        <a href="photos/11.jpg" data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking.">
+        <a href="photos/11.jpg" data-caption="I did a tour of a cave today and the view of the landscape below was breathtaking." title="Cave">
             <img src="photos/thumbnails/11.jpg" alt="">
         </a>
-        <a href="photos/12.jpg" data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in.">
+        <a href="photos/12.jpg" data-caption="I walked through this meadow of bluebells and got a good view of the snow on the mountain before the fog came in." title="Bluebells">
             <img src="photos/thumbnails/12.jpg" alt="">
         </a>
     </div>
